# pyiamanalyzer

./: README.md  pyproject.toml
src/pyiamanalyzer/: __about__.py  __init__.py  main.py
src/pyiamanalyzer/cloudformation/: stack.py
src/pyiamanalyzer/core/: deployer.py
src/pyiamanalyzer/lambdas/: access_analyzer_alerting.py
tests/: test_main.py
tests/core/: test_deployer.py
tests/lambdas/: test_access_analyzer_alerting.py
