[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyiamanalyzer"
dynamic = ["version"]
description = 'Automated IAM Security for AWS'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Joel McCoy", email = "nbajoel@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "troposphere"
]

[project.urls]
Documentation = "https://github.com/joelmccoy/pyiamanalyzer#readme"
Issues = "https://github.com/joelmccoy/pyiamanalyzer/issues"
Source = "https://github.com/joelmccoy/pyiamanalyzer"

[tool.hatch.version]
path = "src/pyiamanalyzer/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
main = "python src/pyiamanalyzer/main.py {args}"
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.coverage.run]
source_pkgs = ["pyiamanalyzer", "tests"]
branch = true
parallel = true
omit = [
  "src/pyiamanalyzer/__about__.py",
]

[tool.coverage.paths]
pyiamanalyzer = ["src/pyiamanalyzer", "*/pyiamanalyzer/src/pyiamanalyzer"]
tests = ["tests", "*/pyiamanalyzer/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.lint]
extra-dependencies = [
  "mypy>=1.0.0",
  "ruff>=0.1.9",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/pyiamanalyzer tests}"
fmt = [
  "ruff {args:.}",
  "ruff format {args:.}",
]
all = [
  "fmt",
  "typing",
]